Corrected the alignment of the carousel controls

--- a/src/styles/hostelCarousel.css
+++ b/src/styles/hostelCarousel.css
@@ -19,17 +19,6 @@
     margin: 16px 0px;
   }
 
-
-  
-  
-  
-  
-  
-  
-
-  
-  
-  
-  
-  
-  
+  button.carousel-control-prev div.rounded-circle {
+    transform: translateY(-55%);
+  }
